--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,7 @@
 {
   "root": true,
-  "extends": "@upstatement/eslint-config/react"
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended"
+  ]
 }
