Fixed jobs slider

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,5 +3,9 @@
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended"
-  ]
+  ],
+  "parserOptions": {
+    "sourceType": "module",
+    "ecmaVersion": 2020
+  }
 }
