--- a/.eslintrc
+++ b/.eslintrc
@@ -7,5 +7,9 @@
   "parserOptions": {
     "sourceType": "module",
     "ecmaVersion": 2020
+  },
+  "env": {
+    "browser": true,
+    "node": true
   }
 }
